Fixed the inverse function of f(x) = ((x + 0.055) / 1.055) ^ 2.4 https://bugs.webkit.org/show_bug.cgi?id=38735

Reviewed by Dirk Schulze

It is ((x ^ (1 / 2.4)) * 1.055) - 0.055

Chromium pixel tests cover the issue.

* platform/graphics/ImageBuffer.cpp:
(WebCore::ImageBuffer::transformColorSpace):



Canonical link: https://commits.webkit.org/50243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59002 268f45cc-cd09-0410-ab3c-d52691b4dbfc